--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -32,6 +32,6 @@
     </header>
     <footer>
         &copy; Copyright 2021 Joshua Foley <br/>
-    </footer>Contac
+    </footer>
 </body>
 </html>
