Added Information too Tean and Index

--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -17,7 +17,7 @@
         </nav>
     <main>
         <section>
-            <h1>Body Of Infor</h1>
+            <h1>Body Of Info</h1>
             <p>This will be the bulk of the page Info, The body if you will.</p>
             <!--TODO Expand/Add Info Later-->
             <aside>Possible Content</aside>
@@ -31,7 +31,7 @@
     </main>
     </header>
     <footer>
-        &copy; Copyright 2021 Joshua Foley <br/>
+        &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br/>
     </footer>
 </body>
 </html>
