--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1> NAME AND LOGO</h1> <p>TAG LINE</p>
+        <h1> Bonfire Tech. LOGO</h1> <p><b>Sit at our fire to soak in the wealth of knowledge</b></p>
         <nav>
             <ul>
                 <li>Home</li>
@@ -17,21 +17,18 @@
         </nav>
     <main>
         <section>
-            <h1>Body Of Infor</h1>
-            <p>This will be the bulk of the page Info, The body if you will.</p>
-            <!--TODO Expand/Add Info Later-->
-            <aside>Possible Content</aside>
-            <!--TODO Figure out if needed-->
-            <article>
-                <h3>Helpful Info</h3>
-                <p>This will house Information/List</p>
-                <!--TODO Add Lists/Info-->
-            </article>
+            <h1>ABOUT US</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis mauris massa, eget feugiat lacus congue vel. Sed sed ex nisl. In sed tortor eleifend, elementum felis ac, convallis magna. Suspendisse blandit dui metus, sed feugiat orci vulputate id. Nullam lobortis metus vel imperdiet dictum. Proin enim nisl, accumsan at lorem luctus, laoreet efficitur mi. Ut hendrerit molestie aliquet. Aliquam vel ligula vel ante semper luctus. Duis nibh augue, ullamcorper vehicula dui eu, dictum mattis leo.</p>
+
+            <h2>WHY CHOOSE US?</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis tellus ex. Aliquam finibus vitae ante in pulvinar. Nullam id tellus et orci scelerisque gravida. Ut ac tempus mauris, a auctor risus. Nullam id condimentum dui. Donec feugiat leo neque, non ultrices lorem convallis placerat. Quisque tincidunt diam lacinia, maximus orci sit amet, tempor tellus. Quisque varius scelerisque consectetur. Fusce sem leo, convallis sit amet purus non, efficitur pellentesque magna.</p>
+            
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit bibendum mauris convallis suscipit. Vivamus at lacus sit amet sapien accumsan dictum a ac leo. Curabitur semper, orci ac aliquet pellentesque, ex nunc rhoncus odio, vitae mollis nunc risus ac dui. Curabitur venenatis mollis risus ac ornare. Morbi malesuada maximus quam, et dignissim erat faucibus a. Aliquam aliquam sem sem. Proin eleifend diam elit, rutrum tristique felis bibendum non. Proin eleifend, felis sed varius rhoncus, risus enim auctor nisl, in iaculis odio sem at nisi. Sed purus eros, pretium sed elementum eu, tempor ac lorem. Cras nec urna eu turpis efficitur molestie. Vivamus euismod et magna nec luctus. Nulla ut nunc leo.</p>
         </section>
     </main>
     </header>
     <footer>
-        &copy; Copyright 2021 Joshua Foley <br/>
+        &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br/>
     </footer>
 </body>
 </html>
