Finished Basic pages

--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1> NAME AND LOGO</h1> <p>TAG LINE</p>
+        <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
         <nav>
             <ul>
                 <li>Home</li>
@@ -15,23 +15,27 @@
                 <li>Contact</li>
             </ul>
         </nav>
+    </header>
     <main>
         <section>
             <h1>Body Of Info</h1>
             <p>This will be the bulk of the page Info, The body if you will.</p>
             <!--TODO Expand/Add Info Later-->
-            <aside>Possible Content</aside>
+            <aside></aside>
             <!--TODO Figure out if needed-->
             <article>
-                <h3>Helpful Info</h3>
-                <p>This will house Information/List</p>
+                <h3>Graphic Design</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rhoncus, lectus id interdum lacinia, diam ante dictum risus, accumsan consectetur ex nisi quis elit. Nullam malesuada ac neque sed tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque venenatis odio eu lobortis volutpat. Nam elementum molestie porta. Proin posuere pellentesque quam, eu condimentum justo molestie eget. Praesent nisl felis, malesuada non molestie non, tempor et purus.
+                </p>
+                <h3>Coding</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sodales at elit in fringilla. In in hendrerit arcu. Nulla in lorem est. Curabitur porttitor iaculis ornare. Morbi quam est, viverra vel viverra vitae, tempor sed urna. Nulla velit sem, iaculis non tincidunt eu, sodales euismod arcu. Fusce vel magna a sapien ullamcorper pretium. Aliquam a aliquam orci.</p>
                 <!--TODO Add Lists/Info-->
             </article>
         </section>
     </main>
-    </header>
     <footer>
-        &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br/>
+        &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br />
     </footer>
 </body>
 </html>
