--- a/FED1STUDIOProject/Contact.html
+++ b/FED1STUDIOProject/Contact.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1> NAME AND LOGO</h1> <p>TAG LINE</p>
+        <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
         <nav>
             <ul>
                 <li>Home</li>
@@ -15,23 +15,32 @@
                 <li>Contact</li>
             </ul>
         </nav>
+    </header>
     <main>
         <section>
-            <h1>Body Of Infor</h1>
-            <p>This will be the bulk of the page Info, The body if you will.</p>
+            <h1>Contact Us!</h1>
+            <p>
+                <ol>
+                    <li>Phone: 816 - 857- 5309</li>
+                    <li>Email: learning@smallbiz.com</li>
+                    <li>Address: 1740 W 92nd Street, Kansas City, MO 64114</li>
+                    <li>Twitter: @weteachstuff</li>
+                    <li>Facebook: www.facebook.com/learnwithus</li>
+                    <li>LinkedIn: www.linkedin.com/learnwithus</li>
+                </ol>
+            </p>
             <!--TODO Expand/Add Info Later-->
-            <aside>Possible Content</aside>
+            <aside></aside>
             <!--TODO Figure out if needed-->
             <article>
-                <h3>Helpful Info</h3>
-                <p>This will house Information/List</p>
+                <h3></h3>
+                <p></p>
                 <!--TODO Add Lists/Info-->
             </article>
         </section>
     </main>
-    </header>
     <footer>
-        &copy; Copyright 2021 Joshua Foley <br/>
+        &copy; Copyright 2021 Joshua Foley <br />
     </footer>
 </body>
 </html>
