--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1> Bonfire Tech. LOGO</h1> <p><b>Sit at our fire to soak in the wealth of knowledge</b></p>
+        <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
         <nav>
             <ul>
                 <li>Home</li>
