Add Stylesheet with detail

--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+
+    <link href="StyleSheets/StyleSheetAlpha.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -27,7 +29,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit bibendum mauris convallis suscipit. Vivamus at lacus sit amet sapien accumsan dictum a ac leo. Curabitur semper, orci ac aliquet pellentesque, ex nunc rhoncus odio, vitae mollis nunc risus ac dui. Curabitur venenatis mollis risus ac ornare. Morbi malesuada maximus quam, et dignissim erat faucibus a. Aliquam aliquam sem sem. Proin eleifend diam elit, rutrum tristique felis bibendum non. Proin eleifend, felis sed varius rhoncus, risus enim auctor nisl, in iaculis odio sem at nisi. Sed purus eros, pretium sed elementum eu, tempor ac lorem. Cras nec urna eu turpis efficitur molestie. Vivamus euismod et magna nec luctus. Nulla ut nunc leo.</p>
         </section>
     </main>
-    <footer>
+    <footer id="FT">
         &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br/>
     </footer>
 </body>
