Edited Colors and Links in COntact

--- a/FED1STUDIOProject/Delete.html
+++ b/FED1STUDIOProject/Delete.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8" />
     <title></title>
 
-    <link href="StyleSheets/StyleSheetAlpha.css" rel="stylesheet"/>
+    <link href="StyleSheets/StyleSheetAlpha.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-
-    </header>
+    <header></header>
     <main>
         <section>
             <h1>Contact Us!</h1>
@@ -20,7 +18,7 @@
                     <li>Address: 1740 W 92nd Street, Kansas City, MO 64114</li>
                     <li><a href="https://mobile.twitter.com/weteachstuff">Twitter</a></li>
                     <li><a href="https://www.facebook.com/learnwithus">Facebook</a></li>
-                    <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a>li>
+                    <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a><li>
                 </ol>
             </p>
             <!--TODO Expand/Add Info Later-->
