--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="StyleSheets/StyleSheetAlpha.css" rel="stylesheet" />
 </head>
 <body>
     <header>
         <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Team</li>
-                <li>Contact</li>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Classes.html">Classes</a></li>
+                <li><a href="Team.html">Team</a></li>
+                <li><a href="Contact.html">Contact Info</a></li>
             </ul>
         </nav>
     </header>
