Mass Update to colors, font and minor formatting

--- a/FED1STUDIOProject/Contact.html
+++ b/FED1STUDIOProject/Contact.html
@@ -8,20 +8,39 @@
 </head>
 <body>
     <header>
-
+        <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
+        <nav>
+            <ul>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Classes.html">Classes</a></li>
+                <li><a href="Team.html">Team</a></li>
+                <li><a href="Contact.html">Contact Info</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
+            <p>
+                <h2>Loaction</h2>
+               1740 W 92nd Street, Kansas City, MO 64114
+            </p>
             <h1>Contact Us!</h1>
             <p>
-                <ol>
+                <ul class="info">
                     <li><a href="tel:816-857-539">Call Us</a></li>
+                </ul>
+                <ul class="info">
                     <li><a href="mailto:learning@smallbiz.com">Email</a></li>
-                    <li>Address: 1740 W 92nd Street, Kansas City, MO 64114</li>
+                </ul>                   
+                <ul class="info">
                     <li><a href="https://mobile.twitter.com/weteachstuff">Twitter</a></li>
-                    <li><a href="https://www.facebook.com/learnwithus">Facebook</a></li>
-                    <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a>li>
-                </ol>
+                </ul>
+                <ul class="info">
+                    <li><a href="https://www.facebook.com/learnwithus">Facebook</a></li>                    
+                </ul>
+                <ul class="info">
+                <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a></li>
+                </ul>
             </p>
             <!--TODO Expand/Add Info Later-->
             <aside></aside>
