--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -19,9 +19,9 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="aline-center">
             <h2>ABOUT US</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis mauris massa, eget feugiat lacus congue vel. Sed sed ex nisl. In sed tortor eleifend, elementum felis ac, convallis magna. Suspendisse blandit dui metus, sed feugiat orci vulputate id. Nullam lobortis metus vel imperdiet dictum. Proin enim nisl, accumsan at lorem luctus, laoreet efficitur mi. Ut hendrerit molestie aliquet. Aliquam vel ligula vel ante semper luctus. Duis nibh augue, ullamcorper vehicula dui eu, dictum mattis leo.</p>
+                <p class="Fan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis mauris massa, eget feugiat lacus congue vel. Sed sed ex nisl. In sed tortor eleifend, elementum felis ac, convallis magna. Suspendisse blandit dui metus, sed feugiat orci vulputate id. Nullam lobortis metus vel imperdiet dictum. Proin enim nisl, accumsan at lorem luctus, laoreet efficitur mi. Ut hendrerit molestie aliquet. Aliquam vel ligula vel ante semper luctus. Duis nibh augue, ullamcorper vehicula dui eu, dictum mattis leo.</p>
 
                 <h2>WHY CHOOSE US?</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis tellus ex. Aliquam finibus vitae ante in pulvinar. Nullam id tellus et orci scelerisque gravida. Ut ac tempus mauris, a auctor risus. Nullam id condimentum dui. Donec feugiat leo neque, non ultrices lorem convallis placerat. Quisque tincidunt diam lacinia, maximus orci sit amet, tempor tellus. Quisque varius scelerisque consectetur. Fusce sem leo, convallis sit amet purus non, efficitur pellentesque magna.</p>
