Change most CSS and Name

--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -2,29 +2,28 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Joshua Foley" />
     <title></title>
-    <link href="StyleSheets/StyleSheetAlpha.css" rel="stylesheet" />
+    <link href="css/Style1.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
-        <nav>
-            <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Classes.html">Classes</a></li>
-                <li><a href="Team.html">Team</a></li>
-                <li><a href="Contact.html">Contact Info</a></li>
-            </ul>
-        </nav>
+        <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
+
+        <p>Soak in the light of Knowledge</p>
     </header>
+    <nav>
+        <ul>
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="Classes.html">Classes</a></li>
+            <li><a href="Team.html">Team</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <main>
         <section>
-            <h1 class="aline-center">Classes</h1>
-           
-          
-            <!--TODO Expand/Add Info Later-->
-            <aside></aside>
-            <!--TODO Figure out if needed-->
+            <h1>CLASSES</h1>
+
             <article>
                 <h3>Level 1 Mastery(Beating the game without Leveling)</h3>
                 <p>
@@ -32,7 +31,6 @@
                 </p>
                 <h3>Speedrun</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sodales at elit in fringilla. In in hendrerit arcu. Nulla in lorem est. Curabitur porttitor iaculis ornare. Morbi quam est, viverra vel viverra vitae, tempor sed urna. Nulla velit sem, iaculis non tincidunt eu, sodales euismod arcu. Fusce vel magna a sapien ullamcorper pretium. Aliquam a aliquam orci.</p>
-                <!--TODO Add Lists/Info-->
             </article>
         </section>
     </main>
