--- a/FED1STUDIOProject/Contact.html
+++ b/FED1STUDIOProject/Contact.html
@@ -2,54 +2,43 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="author" content="Joshua Foley" />
     <title></title>
-
-    <link href="StyleSheets/StyleSheetAlpha.css" rel="stylesheet"/>
+    <link href="css/Style1.css" rel="stylesheet" />
 </head>
 <body>
     <header>
-        <h1> Bonfire Tech. LOGO</h1> <p>Sit at our fire to soak in the wealth of knowledge</p>
-        <nav>
-            <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="Classes.html">Classes</a></li>
-                <li><a href="Team.html">Team</a></li>
-                <li><a href="Contact.html">Contact Info</a></li>
-            </ul>
-        </nav>
+        <h1> Crystal Learning  <img src="Images/F.jpg" width="60" height="60" /></h1>
+
+        <p>Soak in the light of Knowledge</p>
     </header>
+    <nav>
+        <ul>
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="Classes.html">Classes</a></li>
+            <li><a href="Team.html">Team</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <main>
         <section>
             <p>
-                <h2>Loaction</h2>
-               1740 W 92nd Street, Kansas City, MO 64114
+                <h4> This is a test project to learn to code a website with just HTML and CSS</h4>
+            </p>
+            <h2 color="red">Loaction</h2>
+            <p color="white">
+                1740 W 92nd Street, Kansas City, MO 64114
             </p>
             <h1>Contact Us!</h1>
-            <p>
-                <ul class="info">
+            <div>
+                <ul>
                     <li><a href="tel:816-857-539">Call Us</a></li>
-                </ul>
-                <ul class="info">
                     <li><a href="mailto:learning@smallbiz.com">Email</a></li>
-                </ul>                   
-                <ul class="info">
                     <li><a href="https://mobile.twitter.com/weteachstuff">Twitter</a></li>
+                    <li><a href="https://www.facebook.com/learnwithus">Facebook</a></li>
+                    <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a></li>
                 </ul>
-                <ul class="info">
-                    <li><a href="https://www.facebook.com/learnwithus">Facebook</a></li>                    
-                </ul>
-                <ul class="info">
-                <li><a href="http://www.linkedin.com/learnwithus">Linkedin</a></li>
-                </ul>
-            </p>
-            <!--TODO Expand/Add Info Later-->
-            <aside></aside>
-            <!--TODO Figure out if needed-->
-            <article>
-                <h3></h3>
-                <p></p>
-                <!--TODO Add Lists/Info-->
-            </article>
+            </div>
         </section>
     </main>
     <footer>
