Added All new content

--- a/FED1STUDIOProject/Classes.html
+++ b/FED1STUDIOProject/Classes.html
@@ -2,38 +2,75 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Joshua Foley" />
     <title></title>
-    <link href="css/Style1.css" rel="stylesheet" />
+    <link href="StyleSheet/Style.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
+    <header class="header">
+        <div>
+            <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
 
-        <p>Soak in the light of Knowledge</p>
+            <p>Soak in the light of Knowledge</p>
+        </div>
     </header>
-    <nav>
-        <ul>
-            <li><a href="Index.html">Home</a></li>
-            <li><a href="Classes.html">Classes</a></li>
-            <li><a href="Team.html">Team</a></li>
-            <li><a href="Contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <div>
+        <nav>
+            <ul>
+                <li><a href="Index.html">Home</a></li>
+                <li><a href="Classes.html">Classes</a></li>
+                <li><a href="Team.html">Team</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     <main>
-        <section>
-            <h1>CLASSES</h1>
+        <div class="wrapper">
+            <div class="box1">
+                <h3>DPS</h3>
+                <img src="Images/dragoon.png" width="235" height="180" />
+                <p>Quina reflect sin shooting star mythril ore thunder mythril helm Quetzalli corsair. Snow esuna moogle ehrgeiz echo screen death tin armour Hades dragoon. Galuf slow ultima weapon godhand poison fang water demon's mail Carbuncle monk.</p>
+            </div>
 
-            <article>
-                <h3>Level 1 Mastery(Beating the game without Leveling)</h3>
+            <div class="box2">
+                <h3>Tanking</h3>
+                <img src="Images/paladin.png" width="235" height="180" />
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rhoncus, lectus id interdum lacinia, diam ante dictum risus, accumsan consectetur ex nisi quis elit. Nullam malesuada ac neque sed tincidunt. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque venenatis odio eu lobortis volutpat. Nam elementum molestie porta. Proin posuere pellentesque quam, eu condimentum justo molestie eget. Praesent nisl felis, malesuada non molestie non, tempor et purus.
+                    Ward slow behemoth ehrgeiz echo screen regen bronze armor Quetzalli white mage. Rinoa limit break tonberry princess guard tent slow leather shirt Garuda blue mage. Bartz blizzara gilgamesh ultima weapon smoke bomb thunder silk robe Bahamut black mage.
                 </p>
-                <h3>Speedrun</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sodales at elit in fringilla. In in hendrerit arcu. Nulla in lorem est. Curabitur porttitor iaculis ornare. Morbi quam est, viverra vel viverra vitae, tempor sed urna. Nulla velit sem, iaculis non tincidunt eu, sodales euismod arcu. Fusce vel magna a sapien ullamcorper pretium. Aliquam a aliquam orci.</p>
-            </article>
-        </section>
+            </div>
+
+            <div class="box3">
+                <h3>Healing</h3>
+                <img src="Images/whitemage.png" width="235" height="180" />
+                <p>
+                    Tidus blizzard gilgamesh shooting star eye drops hastega chain mail Yojimbo samurai. Fran death bahamut spirit lance hi-potion ultima power wrist Yojimbo paladin. Kiros blizzara judges ultima weapon mythril ore full-life bronze vest Fenir ranger.
+                </p>
+            </div>
+            <div class="box4">
+                <h3>Crafting</h3>
+                <img src="Images/blacksmith.png" width="235" height="180" />
+                <p>Rude blizzaga gilgamesh spirit lance blossom crown thunder bronze vest Leviathan ninja. Marcus firaga moogle tiger racket mega-phoenix cure dragon wrist Shiva bard. Lenna protect magus sisters hp shout mega-ether shell ritual hat Siren thief.</p>
+            </div>
+
+            <div class="box5">
+                <h3>Gathering</h3>
+                <img src="Images/miner.png" width="235" height="180" />
+                <p>Vaan flare behemoth shooting star map life mythril armlet Titan white mage. Fang watera sin hp shout remedy bio mythril helm Garuda beastmaster. Sephiroth curaga malboro shooting star water crystal summon white robe Ixion blue mage.</p>
+            </div>
+
+            <div class="box6">
+                <h3>RolePlay</h3>
+                <img src="Images/RP.png" width="235" height="180" />
+                <p>
+                    Generate Text
+                    Biggs firaga behemoth tiger racket potion water thief hat Titan dark knight. Cait Sith cure magus sisters princess guard death stone thunder rubber suit Hades white mage. Ward ultima flan lion heart wind crystal slow dragon wrist Yojimbo ranger.
+                </p>
+            </div>
+
+        </div>
+
     </main>
+
     <footer>
         &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br />
     </footer>
