--- a/FED1STUDIOProject/Contact.html
+++ b/FED1STUDIOProject/Contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Joshua Foley" />
     <title></title>
-    <link href="css/Style1.css" rel="stylesheet" />
+    <link href="StyleSheets/Style1.css" rel="stylesheet" />
 </head>
 <body>
     <header>
