--- a/FED1STUDIOProject/Index.html
+++ b/FED1STUDIOProject/Index.html
@@ -2,15 +2,16 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Joshua Foley" />
     <title></title>
-    <link href="css/Style1.css" rel="stylesheet" />
+    <link href="StyleSheet/Style.css" rel="stylesheet" />
 </head>
 <body>
-    <header>
-        <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
+    <header class="header">
+        <div>
+            <h1> Crystal Learning   <img src="Images/F.jpg" width="60" height="60" /></h1>
 
-        <p>Soak in the light of Knowledge</p>
+            <p>Soak in the light of Knowledge</p>
+        </div>
     </header>
     <div>
         <nav>
@@ -24,19 +25,37 @@
     </div>
     <main>
         <section>
-            <h2>ABOUT US</h2>
-
-            <p class="Fan">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis mauris massa, eget feugiat lacus congue vel. Sed sed ex nisl. In sed tortor eleifend, elementum felis ac, convallis magna. Suspendisse blandit dui metus, sed feugiat orci vulputate id. Nullam lobortis metus vel imperdiet dictum. Proin enim nisl, accumsan at lorem luctus, laoreet efficitur mi. Ut hendrerit molestie aliquet. Aliquam vel ligula vel ante semper luctus. Duis nibh augue, ullamcorper vehicula dui eu, dictum mattis leo.</p>
-
-
-
-            <h2>WHY CHOOSE US?</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis tellus ex. Aliquam finibus vitae ante in pulvinar. Nullam id tellus et orci scelerisque gravida. Ut ac tempus mauris, a auctor risus. Nullam id condimentum dui. Donec feugiat leo neque, non ultrices lorem convallis placerat. Quisque tincidunt diam lacinia, maximus orci sit amet, tempor tellus. Quisque varius scelerisque consectetur. Fusce sem leo, convallis sit amet purus non, efficitur pellentesque magna.</p>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis blandit bibendum mauris convallis suscipit. Vivamus at lacus sit amet sapien accumsan dictum a ac leo. Curabitur semper, orci ac aliquet pellentesque, ex nunc rhoncus odio, vitae mollis nunc risus ac dui. Curabitur venenatis mollis risus ac ornare. Morbi malesuada maximus quam, et dignissim erat faucibus a. Aliquam aliquam sem sem. Proin eleifend diam elit, rutrum tristique felis bibendum non. Proin eleifend, felis sed varius rhoncus, risus enim auctor nisl, in iaculis odio sem at nisi. Sed purus eros, pretium sed elementum eu, tempor ac lorem. Cras nec urna eu turpis efficitur molestie. Vivamus euismod et magna nec luctus. Nulla ut nunc leo.</p>
+            <div>
+                <h2>ABOUT US</h2>
+            </div>
+            <article class="clear">
+                <div class="smallBox">
+                    <img class="imgSmallBox" src="Images/CommonArea.png" />
+                    <p>
+                        Laguna blizzard malboro missing score mog's amulet fira myrthil armor Quetzalli dark knight. Ashe haste ultros champion megalixir thunder cotton robe Garuda bard. Selphie waterga gilgamesh missing score emerald cura demon's mail Kujata samurai. Prompto cura gilgamesh ehrgeiz water crystal water diamond armor Seraph bard. Cinna auto-life bahamut onion knight ore ultima mantra band Ixion ninja. Seymour Guado slowga judges godhand gold needle life bronze helm Shiva samurai. Ward flare bomb champion turbo ether slow linen cuirass Siren black mage. Rinoa slow tonberry godhand soft slow shield armor Bahamut dancer. Shadow firaga ultros tiger racket chocobo feather water silk gloves Shiva dragoon. Penelo slow chocobo ehrgeiz gold needle summon diamond armor Leviathan corsair.
+                        <div class="clear"> </div>
+                </div>
+            </article>
+            <div>
+                <h2>WHY CHOOSE US?</h2>
+            </div>
+            <article class="clear">
+                <div class="smallBoxR">
+                    <img class="imgSmallBox" src="Images/Library.png" />
+                    <p>
+                        Rikku blizzard cactuar godhand earth stone fira power wrist Yojimbo black mage. Noctis blizzard bomb godhand fire crystal regen thunder gloves Garuda thief. Faris slow magus sisters missing score death stone firaga ritual hat Quetzalli dark knight. Sephiroth blizzaga ultima weapon princess guard fire crystal summon thief gloves Siren puppetmaster. Dadaluma holy bomb premium heart hi-potion watera dragon wrist Bahamut corsair.
+                    </p>
+                </div>
+                <div class="smallBoxL">
+                    <img class="imgSmallBoxR" src="Images/Passout.png" />
+                    <p>
+                        Shadow summon ultros spirit lance tantal greens haste bracer Ixion ranger. Umaro life cactuar godhand remedy thunder myrthril vest Diabolos thief. Shadow dispel cactuar missing score dragon scale shell diamond armor Bahamut ranger. Amarant water bomb lion heart amethyst haste thief gloves Titan dragoon.
+                    </p>
+                </div>
+            </article>
         </section>
     </main>
+
     <footer>
         &copy; Copyright 2021 Joshua Foley. All Rights Reserved. <br />
     </footer>
