--- a/FED1STUDIOProject/Team.html
+++ b/FED1STUDIOProject/Team.html
@@ -2,10 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="author" content="Joshua Foley" />
     <title></title>
-    <link href="css/Style1.css" rel="stylesheet" />
-
+    <link href="StyleSheet/Style.css" rel="stylesheet" />
 </head>
 <body>
     <header>
@@ -23,23 +21,31 @@
     </nav>
     <main>
         <section>
-            <h1>MEET THE TEAM</h1>
+            <h1>LEADERSHIP</h1>
             <p>Let us tell you a bit about the staff!</p>
-
-            <article>
-
-                <h3>Steven Stephenson(Speedrunner)</h3>
+            <article class="smallBox">
+                <h3>Zexion Westbrook</h3>
+                <img class="imgSmallHead" src="Images/headshot2.png" />
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at mauris felis. Praesent est tortor, placerat in faucibus eu, semper ac enim. Praesent condimentum dolor eros, nec posuere lacus cursus et. Nunc sed odio tortor. In quis finibus sem. Nulla libero diam, suscipit quis ligula nec, eleifend mollis nisi. Sed ornare fringilla auctor. Aenean et metus rutrum ligula vulputate viverra. Sed ultrices tempor elit id faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                    Auron blizzaga judges ehrgeiz echo herbs regen rubber helm Siren puppetmaster. Ashe blizzard cactuar excalibur echo screen slowga power vest Cait Sith ranger. Sephiroth shell bahamut godhand phoenix down cura gaia gear Diabolos summoner. Rude summon ultima weapon onion knight magic lamp slow magician robe Yojimbo ranger. Lulu holy ultros ehrgeiz mythril ore hastega silk robe Ragnarok monk. Reno slowga cactuar hp shout tent summon shield armor Seraph monk. Ignis curaga malboro champion water crystal reflect rubber suit Odin ranger. Rinoa regen tonberry lion heart pearl firaga silk shirt Titan blue mage. Vincent Valentine bio gilgamesh lion heart mega-phoenix full-life chain mail Shiva scholar. Umaro blizzara magus sisters onion knight hi-ether ultima steepled hat Quetzalli puppetmaster.
                 </p>
-                <h3>John Johnston</h3>
+                <div class="clear"> </div>
+            </article>
+            <artilce class="smallBox">
+                <h3>Sena Titania</h3>
+                <img class="imgSmallHead" src="Images/headshot1.png" />
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vel nisl sed eros consequat faucibus. Donec eleifend, massa quis luctus viverra, justo sapien tempus erat, nec dictum sem eros ac neque. Sed iaculis nisi id finibus pellentesque. In vestibulum nisi tincidunt ipsum malesuada maximus. Morbi orci leo, consequat eu eros a, placerat consectetur metus. Nam non viverra nunc. Donec sed nisi scelerisque, mollis urna in, ornare tortor. Mauris eu scelerisque libero. Maecenas nisi sapien, interdum ac commodo eget, iaculis in nibh. Mauris rhoncus ac enim vitae placerat. Vestibulum consectetur diam sagittis rutrum posuere. Suspendisse cursus at augue malesuada maximus. Integer ac nibh eget nulla lacinia venenatis non at arcu. Fusce ullamcorper sapien in nulla malesuada dictum. Sed hendrerit bibendum tristique.
+                    Zell blizzaga cactuar dragon's hair wind crystal haste bronze armor Hades puppetmaster. Terra regen bahamut lion heart echo herbs haste mythril helm Odin bard. Auron slow malboro shooting star sphere blizzaga demon's mail Kujata beastmaster. Jecht summon ultima weapon champion gysahl greens thundara thief hat Odin dragoon. Rikku slowga bahamut lion heart echo herbs water thunder gloves Titan bard. Quina water behemoth missing score diamond blizzara steepled hat Anima black mage. Eiko demi judges excalibur echo herbs protect silk shirt Shiva dancer. Tseng blizzaga adamantoise lion heart potion watera feather hat Titan red mage. Elena blizzaga ultros ehrgeiz magicite ultima thunder gloves Cait Sith monk. Kiros holy gilgamesh godhand dark matter summon feather hat Kujata white mage.
                 </p>
-                <h3>Mike Miller</h3>
+                <div class="clear"> </div>
+            </artilce>
+            <article class="smallBox">
+                <h3>Ghades Miller</h3>
+                <img class="imgSmallHead" src="Images/headhsot3.png" />
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada dui malesuada nisi tempor faucibus. Donec efficitur, purus in viverra aliquet, elit purus ullamcorper quam, nec pharetra ipsum lectus sit amet erat. Proin nec est purus. Donec dolor justo, molestie ac mi eget, vulputate porta nulla. Etiam eu sem a sem condimentum ultrices. Donec eu porta lorem. Etiam porttitor lobortis magna, sit amet sagittis tellus ultricies sed. Nam convallis felis a egestas congue. Mauris pulvinar eu enim et fermentum. Pellentesque euismod sed velit viverra molestie. Nullam molestie libero diam, vitae pharetra augue fermentum nec. Fusce sodales placerat sem id maximus. Vestibulum lorem sem, elementum fringilla semper ac, efficitur ac mi. Praesent suscipit turpis eget vestibulum vehicula.
+                    Seifer drain magus sisters hp shout poison fang flare genji gloves Bahamut red mage. Sazh full-life flan onion knight mythril ore flare mantra band Carbuncle dragoon. Lenna fire gilgamesh premium heart turbo ether slowga leather gloves Carbuncle bard. Aeris limit break bomb ehrgeiz smelling salts bio circlet Garuda corsair. Dadaluma reflect sin premium heart light curtain drain tin armour Valefor summoner. Rude hastega behemoth onion knight turtle shell firaga power vest Leviathan samurai. Black Waltz waterga cactuar hp shout unicorn horn haste circlet Leviathan dark knight. Seymour Guado water bomb excalibur chocobo feather drain power vest Kujata summoner. Vaan ultima flan ehrgeiz malboro vine reflect linen cuirass Carbuncle black mage.
                 </p>
+                <div class="clear"> </div>
             </article>
         </section>
     </main>
@@ -47,4 +53,5 @@
         &copy; Copyright 2021 Joshua Foley. All Rights Reserved.
     </footer>
 </body>
+
 </html>
